| Summary: | ASTERISK-25600: bridging: Inconsistency in BRIDGEPEER | ||||
| Reporter: | Jonathan Rose (jrose) | Labels: | |||
| Date Opened: | 2015-12-01 16:21:55.000-0600 | Date Closed: | 2015-12-02 14:08:39.000-0600 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/Bridging | ||
| Versions: | 13.6.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Internal testing has revealed that upon leaving a bridge after having been involved in a 1 to 1 call, the BRIDGEPEER variable is still set.
Given Instructions for Reproduction: ext A calls ext B ext A presses #2 (for blind transfer), then digits for ext C While ext C is ringing, run 'core show channel' for ext B's channel. At this point the BRIDGEPEER variable displays the channel name ext A was showing at the time. | ||||
| Comments: | |||||